--- a/dev/styles/_queries.scss
+++ b/dev/styles/_queries.scss
@@ -21,9 +21,8 @@
 	main {
 		margin-bottom: 20rem;
 	}
-	main p {
+	div.the-content {
 		margin-bottom: 8rem;
-		width: 26.4rem;
 	}
 	div.tagline {
 		margin-bottom: 8rem;
